src/components/common/MainnetLabel/MainnetLabel.module.css
.mainnetLabel {
    display: flex;
    align-items: center;
    gap: 8px;
    border-radius: 20px;
    font-weight: 400 !important;
  }
  
  .labelButton {
    all: unset;
    cursor: pointer;
    position: relative;
    padding: 6px 12px;
    border-radius: 20px;
    background: transparent;
    transition: .3s all ease;
  }
  
  .labelButton:hover {
    background: var(--background-grey-light);
  }
  
  .labelMenu {
    top: 120%;
    left: 0;
    width: 100%;
  }

